--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 .container{
-   background-color: purple;
+   background-color: rgb(33,37,41);
   width: 1000px;
   height: 4000px;
  border-radius:12px;
