alt slide eklendi

--- a/src/app/components/sliderr/sliderr.component.html
+++ b/src/app/components/sliderr/sliderr.component.html
@@ -1,3 +1,25 @@
 <div class="slide-menu">
   <ng-image-slider  [images]="imgCollection" #nav></ng-image-slider>
 </div>
+
+
+
+<div class="fragman-con">
+<span class="new-fragman">
+  <i class="bi bi-youtube"></i> Yakında Gelecek Filmler
+</span>
+</div>
+
+
+<div class="slide-bottom">
+<ul>
+  <li> <a href=""> <img src="https://talenthouse-res.cloudinary.com/image/upload/c_limit,f_auto,fl_progressive,h_1280,w_1280/v1622822099/user-863546/submissions/dypi0jar9xkxa2xle7vo.jpg" alt="">       <div id="up-p">18 Ocak</div>                               <div class="bottom-p">Venom: Carnage</div></a></li>
+  <li> <a href=""> <img src="https://cdn.mos.cms.futurecdn.net/8ZZNSej9H2oqYzpa5K422b.jpg" alt="">                                                                                                       <div  id="up-p">21 Eylül</div>                                        <div class="bottom-p">Spider-Man No Way</div></a></li>
+  <li> <a href=""> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTasA14MwztRVXFDbUVsY9BqceqmS0znWu3-w&usqp=CAU" alt="">                                                                <div id="up-p">28 Eylül</div>                                     <div class="bottom-p">The Eternals</div>           </a></li>
+  <li> <a href=""> <img src="https://img.bolumsonucanavari.com/images/Upload/a93ae4c3-e3fe-4b05-96ae-42cef751c1da.jpeg" alt="">                                                                          <div id="up-p">8 Ekim</div>                                    <div class="bottom-p">Mobius</div>           </a></li>
+  <li> <a href=""> <img src="https://img.bolumsonucanavari.com/images/Upload/47691791-2025-45d5-9fbd-0da6590fe8ff.jpg" alt="">                                                                           <div id="up-p">20 Ocak</div>                                    <div class="bottom-p">The Batman</div>           </a></li>
+  <li> <a href=""> <img src="https://tr.web.img2.acsta.net/newsv7/19/12/31/09/55/0451144.jpg" alt="">                                                                                                    <div id="up-p">1 Aralık</div>                                    <div class="bottom-p">Dr.Strange Multiverse</div>           </a></li>
+  <li> <a href=""> <img src="https://filmyhotspot.com/wp-content/uploads/2020/12/39e611e5-870c-4c6d-97a1-e7c9ee51a97b-819x1024.jpg" alt="">                                                              <div id="up-p">25 Aralık</div>                                    <div class="bottom-p">John Wick 4</div>           </a></li>
+  <li> <a href=""> <img src="https://www.filmarasidergisi.com/wp-content/uploads/2021/03/Jurassic-World-Dominion-_0.png" alt="">                                                                         <div id="up-p">12 Şubat</div>                                 <div class="bottom-p">Jurassic World: Domination </div>           </a></li>
+</ul>
+</div>
