--- a/src/app/components/sliderr/sliderr.component.css
+++ b/src/app/components/sliderr/sliderr.component.css
@@ -1,6 +1,78 @@
-.slide-menu{
-margin-top: 15px  ;
+*{
+  color: white;
+  padding: 0;
+  margin: 0;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  list-style-type: none;
+  box-sizing: border-box;
 
 }
 
+.slide-menu{
+margin-top: 15px  ;
+}
 
+.slide-bottom{
+background-color: rgb(25,29,32);
+margin-top: 10px;
+border-radius: 14px;
+border-top: gray 1px solid;
+
+}
+
+a{
+  text-decoration: none;
+
+
+}
+
+ul{
+display: flex;
+padding: 10px;
+
+
+}
+
+li{
+  padding: 15px 30px 25px 15px;
+  margin: 1px;
+  background-color: rgb(25,29,32);
+
+
+
+}
+
+img{
+  width:75px ;
+  height: 75px;
+  border-radius: 50px;
+  border: 5px solid rgb(220,53,69);
+
+}
+
+.bottom-p{
+text-align: center;
+font-size: 14px;
+padding-top: 10px;
+}
+
+#up-p{
+  text-align: center;
+  font-size: 13px;
+  background-color:rgb(220,53,69) ;
+  border-radius: 30px;
+  margin-top: -6px;
+}
+
+.fragman-con{
+  margin-top: 15px;
+  margin-bottom: -5px;
+  font-weight: bold;
+
+}
+
+.new-fragman i {
+  margin-right: 4px;
+  color:rgba(255,255,255,.5);
+
+}
