--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,3 +1,6 @@
-<p>
-  main-page works!
-</p>
+<!-- <p>
+  İndirdiğim template göre main yapiyim sonra videodan api bağlıyim tmdb ye göre
+</p> -->
+
+
+
