--- a/src/app/components/sliderr/sliderr.component.css
+++ b/src/app/components/sliderr/sliderr.component.css
@@ -20,6 +20,7 @@ border-top: gray 1px solid;
 
 }
 
+
 a{
   text-decoration: none;
 
@@ -37,9 +38,10 @@ li{
   padding: 15px 30px 25px 15px;
   margin: 1px;
   background-color: rgb(25,29,32);
+}
 
-
-
+li:hover{
+  transform: scale(.95);
 }
 
 img{
