--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -3,4 +3,116 @@
 </p> -->
 
 
+<div class="main">
+
+
+
+<div class="box">
+  <a href="">
+    <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-12561-wo8ofx_1ffb98d9.jpeg?region=0,0,300,450" alt="">
+  </a>
+</div>
+
+<div class="box">
+  <a href="">
+    <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-12561-wo8ofx_1ffb98d9.jpeg?region=0,0,300,450" alt="">
+  </a>
+</div>
+
+<div class="box">
+  <a href="">
+    <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-12561-wo8ofx_1ffb98d9.jpeg?region=0,0,300,450" alt="">
+  </a>
+</div>
+
+<div class="box">
+  <a href="">
+    <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-12561-wo8ofx_1ffb98d9.jpeg?region=0,0,300,450" alt="">
+  </a>
+</div>
+
+<div class="box">
+  <a href="">
+    <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-12561-wo8ofx_1ffb98d9.jpeg?region=0,0,300,450" alt="">
+  </a>
+</div>
+
+<div class="box">
+  <a href="">
+    <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-12561-wo8ofx_1ffb98d9.jpeg?region=0,0,300,450" alt="">
+  </a>
+</div>
+
+<div class="box">
+  <a href="">
+    <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-12561-wo8ofx_1ffb98d9.jpeg?region=0,0,300,450" alt="">
+  </a>
+</div>
+
+<div class="box">
+  <a href="">
+    <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-12561-wo8ofx_1ffb98d9.jpeg?region=0,0,300,450" alt="">
+  </a>
+</div>
+
+<div class="box">
+  <a href="">
+    <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-12561-wo8ofx_1ffb98d9.jpeg?region=0,0,300,450" alt="">
+  </a>
+</div>
+
+<div class="box">
+  <a href="">
+    <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-12561-wo8ofx_1ffb98d9.jpeg?region=0,0,300,450" alt="">
+  </a>
+</div>
+
+<div class="box">
+  <a href="">
+    <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-12561-wo8ofx_1ffb98d9.jpeg?region=0,0,300,450" alt="">
+  </a>
+</div>
+
+<div class="box">
+  <a href="">
+    <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-12561-wo8ofx_1ffb98d9.jpeg?region=0,0,300,450" alt="">
+  </a>
+</div>
+
+<div class="box">
+  <a href="">
+    <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-12561-wo8ofx_1ffb98d9.jpeg?region=0,0,300,450" alt="">
+  </a>
+</div>
+
+<div class="box">
+  <a href="">
+    <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-12561-wo8ofx_1ffb98d9.jpeg?region=0,0,300,450" alt="">
+  </a>
+</div>
+
+<div class="box">
+  <a href="">
+    <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-12561-wo8ofx_1ffb98d9.jpeg?region=0,0,300,450" alt="">
+  </a>
+</div>
+
+
+</div>
+
+
+
+<div class="pages">
+<ul>
+  <li>  <a href="">1 </a>      </li>
+  <li>  <a href="">2 </a>      </li>
+  <li>  <a href="">3 </a>      </li>
+  <li>  <a href="">4 </a>      </li>
+  <li>  <a href="">5 </a>      </li>
+
+</ul>
+
+</div>
+
+
 
